--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <img
                 class="logo"
-                src="/Assets/Hololive_Production_logo.svg"
+                src="Assets/Hololive_Production_logo.svg"
                 alt=""
             />
             <div class="buttons">
@@ -36,22 +36,22 @@
         <!--Section 1-->
         <section class="container">
             <div class="box">
-                <video src="/Assets/Marine.mp4"></video>
+                <video src="Assets/Marine.mp4"></video>
                 <div class="shad"></div>
             </div>
 
             <div class="box">
-                <video src="/Assets/Kanata.mp4"></video>
+                <video src="Assets/Kanata.mp4"></video>
                 <div class="shad"></div>
             </div>
 
             <div class="box">
-                <video src="/Assets/Miko.mp4"></video>
+                <video src="Assets/Miko.mp4"></video>
                 <div class="shad"></div>
             </div>
 
             <div class="box">
-                <video src="/Assets/Watame.mp4"></video>
+                <video src="Assets/Watame.mp4"></video>
                 <div class="shad"></div>
             </div>
             <p class="head">A new everyday, together.</p>
