--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 Here we introduce our challenges to deliver excitement to fans
                 all around the world.
             </p>
-            <a href="anotherpage.html"
+            <a href="https://francooliveros.github.io/Scary/"
                 ><button><p>Next Page</p></button></a
             >
         </section>
